; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/stm/extr_dw_mipi_dsi-stm.c_dw_mipi_dsi_phy_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/stm/extr_dw_mipi_dsi-stm.c_dw_mipi_dsi_phy_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_mipi_dsi_stm = type { i64 }

@DSI_WRPCR = common dso_local global i32 0, align 4
@WRPCR_REGEN = common dso_local global i32 0, align 4
@WRPCR_BGREN = common dso_local global i32 0, align 4
@DSI_WISR = common dso_local global i64 0, align 8
@WISR_RRS = common dso_local global i32 0, align 4
@SLEEP_US = common dso_local global i32 0, align 4
@TIMEOUT_US = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"!TIMEOUT! waiting REGU, let's continue\0A\00", align 1
@WRPCR_PLLEN = common dso_local global i32 0, align 4
@WISR_PLLLS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"!TIMEOUT! waiting PLL, let's continue\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @dw_mipi_dsi_phy_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dw_mipi_dsi_phy_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.dw_mipi_dsi_stm*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.dw_mipi_dsi_stm*
  store %struct.dw_mipi_dsi_stm* %7, %struct.dw_mipi_dsi_stm** %3, align 8
  %8 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %9 = load i32, i32* @DSI_WRPCR, align 4
  %10 = load i32, i32* @WRPCR_REGEN, align 4
  %11 = load i32, i32* @WRPCR_BGREN, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @dsi_set(%struct.dw_mipi_dsi_stm* %8, i32 %9, i32 %12)
  %14 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %15 = getelementptr inbounds %struct.dw_mipi_dsi_stm, %struct.dw_mipi_dsi_stm* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @DSI_WISR, align 8
  %18 = add nsw i64 %16, %17
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @WISR_RRS, align 4
  %22 = and i32 %20, %21
  %23 = load i32, i32* @SLEEP_US, align 4
  %24 = load i32, i32* @TIMEOUT_US, align 4
  %25 = call i32 @readl_poll_timeout(i64 %18, i32 %19, i32 %22, i32 %23, i32 %24)
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %1
  %29 = call i32 @DRM_DEBUG_DRIVER(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  br label %30

30:                                               ; preds = %28, %1
  %31 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %32 = load i32, i32* @DSI_WRPCR, align 4
  %33 = load i32, i32* @WRPCR_PLLEN, align 4
  %34 = call i32 @dsi_set(%struct.dw_mipi_dsi_stm* %31, i32 %32, i32 %33)
  %35 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %36 = getelementptr inbounds %struct.dw_mipi_dsi_stm, %struct.dw_mipi_dsi_stm* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @DSI_WISR, align 8
  %39 = add nsw i64 %37, %38
  %40 = load i32, i32* %4, align 4
  %41 = load i32, i32* %4, align 4
  %42 = load i32, i32* @WISR_PLLLS, align 4
  %43 = and i32 %41, %42
  %44 = load i32, i32* @SLEEP_US, align 4
  %45 = load i32, i32* @TIMEOUT_US, align 4
  %46 = call i32 @readl_poll_timeout(i64 %39, i32 %40, i32 %43, i32 %44, i32 %45)
  store i32 %46, i32* %5, align 4
  %47 = load i32, i32* %5, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %30
  %50 = call i32 @DRM_DEBUG_DRIVER(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  br label %51

51:                                               ; preds = %49, %30
  ret i32 0
}

declare dso_local i32 @dsi_set(%struct.dw_mipi_dsi_stm*, i32, i32) #1

declare dso_local i32 @readl_poll_timeout(i64, i32, i32, i32, i32) #1

declare dso_local i32 @DRM_DEBUG_DRIVER(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
